# chat-bi

./: .dockerignore  .env-temp  .env.production  .gitignore  Makefile  README.md  chat-bi.drawio  environment.yml  get_db_ddl.sh  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh
.github/: README.md
.github/workflows/: build-and-deploy.yml
app/: chat_bi.py  db.py  main.py
app/agent/: answer_generator.py  chat_bi_agent.py  parse_query_to_sql.py  sql_generator.py  template_manager.py
app/common/: embedding_client.py  milvus_client.py  openai_clinet.py  parameter_resolver.py  visualization.py
app/config/: app_config.py  app_log.py
app/database/: base.py  business_models.py  db.py  db.sql  mysql.py  (+6 more)
backend/: Dockerfile  Makefile  README.md  chat_bi.py  main.py  requirements-win.txt  requirements.txt  run.bat.temp  run.sh.temp
config/: main.py
database/: base.py  business_models.py  db_ddl.json  ddl.py  init_db.py  models.py  query_db.sql  repository.py  system_db.sql  system_models.py  validation.py
deploy/: Dockerfile  docker-compose-base.yaml  docker-compose-prod.yaml  docker-compose.yaml  nginx.conf
frontend/: .dockerignore  Dockerfile  Makefile  index.css  index.html  index.js
images/: chat-bi.drawio
logs/: .gitignore
server/: api.py  query.py  satisfaction.py  templates.py
test/: TEST_DATA_README.md  generate_test_data.py  run_test_data.py
utils/: cache.py  milvus.py  openai.py  visualization.py
web/: Makefile  index.css  index.html  index.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
(+50 files in other folders)
